# Qbit

./: .gitignore  LICENSE  MUJOCO_LOG.TXT  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
containers/insertionnet/: Dockerfile  build.sh  run.sh
containers/insertionnet/compose/: docker-compose.yaml
containers/peg_sim_mujoco/: Dockerfile  build.sh  run.sh
containers/peg_sim_mujoco/compose/: docker-compose.yaml
examples/: force_based_insertion.py  learning_based_insertion.py  position_based_deformation.py  position_based_insertion.py  position_based_insertion_pih.py  position_based_insertion_pih_ft_plot.py
insertion/insertionnet/: data_preprocessing.py  insertionnet_grpc_service.py  insertionnet_service_test.py  train.py
insertion/insertionnet/test_data/: test_data_0.npy
qbit/assets/robots/: ur5e_mujoco_config.yaml
qbit/configs/envs/: data.yaml  (+3 more)
qbit/controllers/: eef_admittance_controller.py  eef_position_controller.py  joint_position_controller.py
qbit/evaluation/: plot_radar_chart.py  process_data_evaluator.py  quality_metric_utils.py
qbit/mujoco_examples/: inspect_robot_xml.py  manage_objects_in_scene.py
qbit/objects/: decomposed_obj.py  env_objects.py  object_base.py  sphered_obj.py
qbit/robots/: kuka_iiwa14_mj.py  robot_base.py  robot_template.py  ur5e_mj.py
qbit/sim_envs/: mujoco_env_base.py  mujoco_env_deformation.py  mujoco_env_insertion.py  ur5e_grpc_test.py
qbit/utils/: data_recording_utils.py  mesh_processing.py  mj_viewer_utils.py  mujoco_utils.py  tf_utils.py
(+25 files in other folders)
