[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qbit"
version = "0.1.0"
authors = [
  { name="Yongzhou Zhang", email="yongzhou.zhang.d@gmail.com" },
  { name="Constantin Schempp", email="constantin.schempp@hotmail.de"},
]
description = "Quality-awared Benchmarking Framework for Robotic Insertion Tasks"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

keywords = ['robotics', 'simulation']

dependencies = [
    'numpy >= 1.24.4',
    'PyYAML >= 6.0.1',
]

[tool.setuptools]
packages = ["qbit"]

[project.scripts]
run_sim = "qbit.qbit_sim:main"

[project.urls]
"Homepage" = "https://github.com/djumpstre/Qbit"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
python_files = [
    "moduletest_*.py",
    "*_moduletest.py",
    "test_*.py",
    "*_test.py",
]
